reference/5.1/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: Décrit les accélérateurs de type disponibles pour les classes .NET Framework
keywords: powershell,applet de commande
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 21093f3a649212526c3fc3eb5405e2a7ce6e49f3
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 10/13/2020
ms.locfileid: "93207518"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="a2352-104">À propos des accélérateurs de type</span><span class="sxs-lookup"><span data-stu-id="a2352-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="a2352-105">SHORT DESCRIPTION COMPLÈTE :</span><span class="sxs-lookup"><span data-stu-id="a2352-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="a2352-106">Décrit les accélérateurs de type disponibles pour les classes .NET Framework</span><span class="sxs-lookup"><span data-stu-id="a2352-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="a2352-107">DESCRIPTION DÉTAILLÉE</span><span class="sxs-lookup"><span data-stu-id="a2352-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="a2352-108">Les accélérateurs de type sont des alias pour les classes .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="a2352-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="a2352-109">Elles vous permettent d’accéder à des classes .NET Framework spécifiques sans avoir à taper explicitement le nom de la classe entière.</span><span class="sxs-lookup"><span data-stu-id="a2352-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="a2352-110">Par exemple, vous pouvez raccourcir la classe **AliasAttribute** de `[System.Management.Automation.AliasAttribute]` à `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="a2352-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="a2352-111">Tous les accélérateurs de type doivent toujours être encapsulés entre crochets ( `[]` ).</span><span class="sxs-lookup"><span data-stu-id="a2352-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="a2352-112">Accélérateurs de type disponibles</span><span class="sxs-lookup"><span data-stu-id="a2352-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="a2352-113">Accélérateur</span><span class="sxs-lookup"><span data-stu-id="a2352-113">Accelerator</span></span>          |                           <span data-ttu-id="a2352-114">Nom complet de la classe</span><span class="sxs-lookup"><span data-stu-id="a2352-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="a2352-115">modification</span><span class="sxs-lookup"><span data-stu-id="a2352-115">adsi</span></span>                         | <span data-ttu-id="a2352-116">System. DirectoryServices. DirectoryEntry</span><span class="sxs-lookup"><span data-stu-id="a2352-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="a2352-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="a2352-117">adsisearcher</span></span>                 | <span data-ttu-id="a2352-118">System. DirectoryServices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="a2352-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="a2352-119">Alias</span><span class="sxs-lookup"><span data-stu-id="a2352-119">Alias</span></span>                        | <span data-ttu-id="a2352-120">System. Management. Automation. AliasAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="a2352-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="a2352-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="a2352-122">System. Management. Automation. AllowEmptyCollectionAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="a2352-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="a2352-123">AllowEmptyString</span></span>             | <span data-ttu-id="a2352-124">System. Management. Automation. AllowEmptyStringAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="a2352-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="a2352-125">AllowNull</span></span>                    | <span data-ttu-id="a2352-126">System. Management. Automation. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="a2352-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="a2352-127">ArgumentCompleter</span></span>            | <span data-ttu-id="a2352-128">System. Management. Automation. ArgumentCompleterAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="a2352-129">tableau</span><span class="sxs-lookup"><span data-stu-id="a2352-129">array</span></span>                        | <span data-ttu-id="a2352-130">System.Array</span><span class="sxs-lookup"><span data-stu-id="a2352-130">System.Array</span></span>                                                        |
|<span data-ttu-id="a2352-131">bigint</span><span class="sxs-lookup"><span data-stu-id="a2352-131">bigint</span></span>                       | <span data-ttu-id="a2352-132">System. Numerics. BigInteger</span><span class="sxs-lookup"><span data-stu-id="a2352-132">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="a2352-133">bool</span><span class="sxs-lookup"><span data-stu-id="a2352-133">bool</span></span>                         | <span data-ttu-id="a2352-134">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="a2352-134">System.Boolean</span></span>                                                      |
|<span data-ttu-id="a2352-135">byte</span><span class="sxs-lookup"><span data-stu-id="a2352-135">byte</span></span>                         | <span data-ttu-id="a2352-136">System.Byte</span><span class="sxs-lookup"><span data-stu-id="a2352-136">System.Byte</span></span>                                                         |
|<span data-ttu-id="a2352-137">char</span><span class="sxs-lookup"><span data-stu-id="a2352-137">char</span></span>                         | <span data-ttu-id="a2352-138">System.Char</span><span class="sxs-lookup"><span data-stu-id="a2352-138">System.Char</span></span>                                                         |
|<span data-ttu-id="a2352-139">cimclass</span><span class="sxs-lookup"><span data-stu-id="a2352-139">cimclass</span></span>                     | <span data-ttu-id="a2352-140">Microsoft. Management. infrastructure. CimClass</span><span class="sxs-lookup"><span data-stu-id="a2352-140">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="a2352-141">cimconverter</span><span class="sxs-lookup"><span data-stu-id="a2352-141">cimconverter</span></span>                 | <span data-ttu-id="a2352-142">Microsoft. Management. infrastructure. CimConverter</span><span class="sxs-lookup"><span data-stu-id="a2352-142">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="a2352-143">ciminstance</span><span class="sxs-lookup"><span data-stu-id="a2352-143">ciminstance</span></span>                  | <span data-ttu-id="a2352-144">Microsoft.Management.Infrastructure.CimInstance</span><span class="sxs-lookup"><span data-stu-id="a2352-144">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="a2352-145">CimSession</span><span class="sxs-lookup"><span data-stu-id="a2352-145">CimSession</span></span>                   | <span data-ttu-id="a2352-146">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="a2352-146">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="a2352-147">cimtype</span><span class="sxs-lookup"><span data-stu-id="a2352-147">cimtype</span></span>                      | <span data-ttu-id="a2352-148">Microsoft. Management. infrastructure. CimType</span><span class="sxs-lookup"><span data-stu-id="a2352-148">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="a2352-149">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="a2352-149">CmdletBinding</span></span>                | <span data-ttu-id="a2352-150">System. Management. Automation. CmdletBindingAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-150">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="a2352-151">CultureInfo</span><span class="sxs-lookup"><span data-stu-id="a2352-151">cultureinfo</span></span>                  | <span data-ttu-id="a2352-152">System. Globalization. CultureInfo</span><span class="sxs-lookup"><span data-stu-id="a2352-152">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="a2352-153">DATETIME</span><span class="sxs-lookup"><span data-stu-id="a2352-153">datetime</span></span>                     | <span data-ttu-id="a2352-154">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="a2352-154">System.DateTime</span></span>                                                     |
|<span data-ttu-id="a2352-155">Décimal</span><span class="sxs-lookup"><span data-stu-id="a2352-155">decimal</span></span>                      | <span data-ttu-id="a2352-156">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="a2352-156">System.Decimal</span></span>                                                      |
|<span data-ttu-id="a2352-157">double</span><span class="sxs-lookup"><span data-stu-id="a2352-157">double</span></span>                       | <span data-ttu-id="a2352-158">System.Double</span><span class="sxs-lookup"><span data-stu-id="a2352-158">System.Double</span></span>                                                       |
|<span data-ttu-id="a2352-159">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="a2352-159">DscLocalConfigurationManager</span></span> | <span data-ttu-id="a2352-160">System. Management. Automation. DscLocalConfigurationManagerAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-160">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="a2352-161">DscProperty</span><span class="sxs-lookup"><span data-stu-id="a2352-161">DscProperty</span></span>                  | <span data-ttu-id="a2352-162">System. Management. Automation. DscPropertyAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-162">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="a2352-163">DscResource</span><span class="sxs-lookup"><span data-stu-id="a2352-163">DscResource</span></span>                  | <span data-ttu-id="a2352-164">System. Management. Automation. DscResourceAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-164">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="a2352-165">float</span><span class="sxs-lookup"><span data-stu-id="a2352-165">float</span></span>                        | <span data-ttu-id="a2352-166">System.Single</span><span class="sxs-lookup"><span data-stu-id="a2352-166">System.Single</span></span>                                                       |
|<span data-ttu-id="a2352-167">guid</span><span class="sxs-lookup"><span data-stu-id="a2352-167">guid</span></span>                         | <span data-ttu-id="a2352-168">System.Guid</span><span class="sxs-lookup"><span data-stu-id="a2352-168">System.Guid</span></span>                                                         |
|<span data-ttu-id="a2352-169">hachage</span><span class="sxs-lookup"><span data-stu-id="a2352-169">hashtable</span></span>                    | <span data-ttu-id="a2352-170">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="a2352-170">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="a2352-171">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="a2352-171">initialsessionstate</span></span>          | <span data-ttu-id="a2352-172">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="a2352-172">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="a2352-173">int</span><span class="sxs-lookup"><span data-stu-id="a2352-173">int</span></span>                          | <span data-ttu-id="a2352-174">System.Int32</span><span class="sxs-lookup"><span data-stu-id="a2352-174">System.Int32</span></span>                                                        |
|<span data-ttu-id="a2352-175">int16</span><span class="sxs-lookup"><span data-stu-id="a2352-175">int16</span></span>                        | <span data-ttu-id="a2352-176">System.Int16</span><span class="sxs-lookup"><span data-stu-id="a2352-176">System.Int16</span></span>                                                        |
|<span data-ttu-id="a2352-177">int32</span><span class="sxs-lookup"><span data-stu-id="a2352-177">int32</span></span>                        | <span data-ttu-id="a2352-178">System.Int32</span><span class="sxs-lookup"><span data-stu-id="a2352-178">System.Int32</span></span>                                                        |
|<span data-ttu-id="a2352-179">int64</span><span class="sxs-lookup"><span data-stu-id="a2352-179">int64</span></span>                        | <span data-ttu-id="a2352-180">System.Int64</span><span class="sxs-lookup"><span data-stu-id="a2352-180">System.Int64</span></span>                                                        |
|<span data-ttu-id="a2352-181">IPAddress</span><span class="sxs-lookup"><span data-stu-id="a2352-181">ipaddress</span></span>                    | <span data-ttu-id="a2352-182">System .net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="a2352-182">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="a2352-183">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="a2352-183">IPEndpoint</span></span>                   | <span data-ttu-id="a2352-184">System .net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="a2352-184">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="a2352-185">long</span><span class="sxs-lookup"><span data-stu-id="a2352-185">long</span></span>                         | <span data-ttu-id="a2352-186">System.Int64</span><span class="sxs-lookup"><span data-stu-id="a2352-186">System.Int64</span></span>                                                        |
|<span data-ttu-id="a2352-187">MailAddress</span><span class="sxs-lookup"><span data-stu-id="a2352-187">mailaddress</span></span>                  | <span data-ttu-id="a2352-188">System .net. mail. MailAddress</span><span class="sxs-lookup"><span data-stu-id="a2352-188">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="a2352-189">NullString</span><span class="sxs-lookup"><span data-stu-id="a2352-189">NullString</span></span>                   | <span data-ttu-id="a2352-190">System. Management. Automation. Language. NullString</span><span class="sxs-lookup"><span data-stu-id="a2352-190">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="a2352-191">Objet ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="a2352-191">ObjectSecurity</span></span>               | <span data-ttu-id="a2352-192">System. Security. AccessControl. objet ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="a2352-192">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="a2352-193">OutputType</span><span class="sxs-lookup"><span data-stu-id="a2352-193">OutputType</span></span>                   | <span data-ttu-id="a2352-194">System. Management. Automation. OutputTypeAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-194">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="a2352-195">Paramètre</span><span class="sxs-lookup"><span data-stu-id="a2352-195">Parameter</span></span>                    | <span data-ttu-id="a2352-196">System. Management. Automation. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-196">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="a2352-197">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="a2352-197">PhysicalAddress</span></span>              | <span data-ttu-id="a2352-198">System .net. NetworkInformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="a2352-198">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="a2352-199">powershell</span><span class="sxs-lookup"><span data-stu-id="a2352-199">powershell</span></span>                   | <span data-ttu-id="a2352-200">System. Management. Automation. PowerShell</span><span class="sxs-lookup"><span data-stu-id="a2352-200">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="a2352-201">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="a2352-201">psaliasproperty</span></span>              | <span data-ttu-id="a2352-202">System. Management. Automation. PSAliasProperty</span><span class="sxs-lookup"><span data-stu-id="a2352-202">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="a2352-203">pscredential</span><span class="sxs-lookup"><span data-stu-id="a2352-203">pscredential</span></span>                 | <span data-ttu-id="a2352-204">System. Management. Automation. PSCredential</span><span class="sxs-lookup"><span data-stu-id="a2352-204">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="a2352-205">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="a2352-205">pscustomobject</span></span>               | <span data-ttu-id="a2352-206">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="a2352-206">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="a2352-207">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="a2352-207">PSDefaultValue</span></span>               | <span data-ttu-id="a2352-208">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-208">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="a2352-209">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="a2352-209">pslistmodifier</span></span>               | <span data-ttu-id="a2352-210">System. Management. Automation. PSListModifier</span><span class="sxs-lookup"><span data-stu-id="a2352-210">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="a2352-211">PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="a2352-211">psmoduleinfo</span></span>                 | <span data-ttu-id="a2352-212">System. Management. Automation. PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="a2352-212">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="a2352-213">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="a2352-213">psnoteproperty</span></span>               | <span data-ttu-id="a2352-214">System. Management. Automation. PSNoteProperty</span><span class="sxs-lookup"><span data-stu-id="a2352-214">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="a2352-215">PSObject</span><span class="sxs-lookup"><span data-stu-id="a2352-215">psobject</span></span>                     | <span data-ttu-id="a2352-216">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="a2352-216">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="a2352-217">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="a2352-217">psprimitivedictionary</span></span>        | <span data-ttu-id="a2352-218">System. Management. Automation. PSPrimitiveDictionary</span><span class="sxs-lookup"><span data-stu-id="a2352-218">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="a2352-219">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="a2352-219">psscriptmethod</span></span>               | <span data-ttu-id="a2352-220">System. Management. Automation. PSScriptMethod</span><span class="sxs-lookup"><span data-stu-id="a2352-220">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="a2352-221">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="a2352-221">psscriptproperty</span></span>             | <span data-ttu-id="a2352-222">System. Management. Automation. PSScriptProperty</span><span class="sxs-lookup"><span data-stu-id="a2352-222">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="a2352-223">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-223">PSTypeNameAttribute</span></span>          | <span data-ttu-id="a2352-224">System. Management. Automation. PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-224">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="a2352-225">PSVariable</span><span class="sxs-lookup"><span data-stu-id="a2352-225">psvariable</span></span>                   | <span data-ttu-id="a2352-226">System. Management. Automation. PSVariable</span><span class="sxs-lookup"><span data-stu-id="a2352-226">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="a2352-227">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="a2352-227">psvariableproperty</span></span>           | <span data-ttu-id="a2352-228">System. Management. Automation. PSVariableProperty</span><span class="sxs-lookup"><span data-stu-id="a2352-228">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="a2352-229">ref</span><span class="sxs-lookup"><span data-stu-id="a2352-229">ref</span></span>                          | <span data-ttu-id="a2352-230">System. Management. Automation. PSReference</span><span class="sxs-lookup"><span data-stu-id="a2352-230">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="a2352-231">regex</span><span class="sxs-lookup"><span data-stu-id="a2352-231">regex</span></span>                        | <span data-ttu-id="a2352-232">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="a2352-232">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="a2352-233">instance d’exécution</span><span class="sxs-lookup"><span data-stu-id="a2352-233">runspace</span></span>                     | <span data-ttu-id="a2352-234">System. Management. Automation. instances d’exécution. Runspace</span><span class="sxs-lookup"><span data-stu-id="a2352-234">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="a2352-235">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="a2352-235">runspacefactory</span></span>              | <span data-ttu-id="a2352-236">System. Management. Automation. instances d’exécution. RunspaceFactory</span><span class="sxs-lookup"><span data-stu-id="a2352-236">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="a2352-237">sbyte</span><span class="sxs-lookup"><span data-stu-id="a2352-237">sbyte</span></span>                        | <span data-ttu-id="a2352-238">System.SByte</span><span class="sxs-lookup"><span data-stu-id="a2352-238">System.SByte</span></span>                                                        |
|<span data-ttu-id="a2352-239">scriptblock</span><span class="sxs-lookup"><span data-stu-id="a2352-239">scriptblock</span></span>                  | <span data-ttu-id="a2352-240">System. Management. Automation. ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="a2352-240">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="a2352-241">securestring</span><span class="sxs-lookup"><span data-stu-id="a2352-241">securestring</span></span>                 | <span data-ttu-id="a2352-242">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="a2352-242">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="a2352-243">unique</span><span class="sxs-lookup"><span data-stu-id="a2352-243">single</span></span>                       | <span data-ttu-id="a2352-244">System.Single</span><span class="sxs-lookup"><span data-stu-id="a2352-244">System.Single</span></span>                                                       |
|<span data-ttu-id="a2352-245">string</span><span class="sxs-lookup"><span data-stu-id="a2352-245">string</span></span>                       | <span data-ttu-id="a2352-246">System.String</span><span class="sxs-lookup"><span data-stu-id="a2352-246">System.String</span></span>                                                       |
|<span data-ttu-id="a2352-247">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="a2352-247">SupportsWildcards</span></span>            | <span data-ttu-id="a2352-248">System. Management. Automation. SupportsWildcardsAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-248">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="a2352-249">switch</span><span class="sxs-lookup"><span data-stu-id="a2352-249">switch</span></span>                       | <span data-ttu-id="a2352-250">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="a2352-250">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="a2352-251">intervalle de temps</span><span class="sxs-lookup"><span data-stu-id="a2352-251">timespan</span></span>                     | <span data-ttu-id="a2352-252">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="a2352-252">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="a2352-253">type</span><span class="sxs-lookup"><span data-stu-id="a2352-253">type</span></span>                         | <span data-ttu-id="a2352-254">System.Type</span><span class="sxs-lookup"><span data-stu-id="a2352-254">System.Type</span></span>                                                         |
|<span data-ttu-id="a2352-255">uint16</span><span class="sxs-lookup"><span data-stu-id="a2352-255">uint16</span></span>                       | <span data-ttu-id="a2352-256">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="a2352-256">System.UInt16</span></span>                                                       |
|<span data-ttu-id="a2352-257">uint32</span><span class="sxs-lookup"><span data-stu-id="a2352-257">uint32</span></span>                       | <span data-ttu-id="a2352-258">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="a2352-258">System.UInt32</span></span>                                                       |
|<span data-ttu-id="a2352-259">uint64</span><span class="sxs-lookup"><span data-stu-id="a2352-259">uint64</span></span>                       | <span data-ttu-id="a2352-260">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="a2352-260">System.UInt64</span></span>                                                       |
|<span data-ttu-id="a2352-261">URI</span><span class="sxs-lookup"><span data-stu-id="a2352-261">uri</span></span>                          | <span data-ttu-id="a2352-262">System.Uri</span><span class="sxs-lookup"><span data-stu-id="a2352-262">System.Uri</span></span>                                                          |
|<span data-ttu-id="a2352-263">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="a2352-263">ValidateCount</span></span>                | <span data-ttu-id="a2352-264">System. Management. Automation. ValidateCountAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-264">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="a2352-265">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="a2352-265">ValidateDrive</span></span>                | <span data-ttu-id="a2352-266">System. Management. Automation. ValidateDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-266">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="a2352-267">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="a2352-267">ValidateLength</span></span>               | <span data-ttu-id="a2352-268">System. Management. Automation. ValidateLengthAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-268">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="a2352-269">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="a2352-269">ValidateNotNull</span></span>              | <span data-ttu-id="a2352-270">System. Management. Automation. ValidateNotNullAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-270">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="a2352-271">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="a2352-271">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="a2352-272">System. Management. Automation. ValidateNotNullOrEmptyAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-272">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="a2352-273">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="a2352-273">ValidatePattern</span></span>              | <span data-ttu-id="a2352-274">System. Management. Automation. ValidatePatternAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-274">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="a2352-275">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="a2352-275">ValidateRange</span></span>                | <span data-ttu-id="a2352-276">System. Management. Automation. ValidateRangeAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-276">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="a2352-277">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="a2352-277">ValidateScript</span></span>               | <span data-ttu-id="a2352-278">System. Management. Automation. ValidateScriptAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-278">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="a2352-279">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="a2352-279">ValidateSet</span></span>                  | <span data-ttu-id="a2352-280">System. Management. Automation. ValidateSetAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-280">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="a2352-281">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="a2352-281">ValidateTrustedData</span></span>          | <span data-ttu-id="a2352-282">System. Management. Automation. ValidateTrustedDataAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-282">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="a2352-283">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="a2352-283">ValidateUserDrive</span></span>            | <span data-ttu-id="a2352-284">System. Management. Automation. ValidateUserDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="a2352-284">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="a2352-285">version</span><span class="sxs-lookup"><span data-stu-id="a2352-285">version</span></span>                      | <span data-ttu-id="a2352-286">System.Version</span><span class="sxs-lookup"><span data-stu-id="a2352-286">System.Version</span></span>                                                      |
|<span data-ttu-id="a2352-287">void</span><span class="sxs-lookup"><span data-stu-id="a2352-287">void</span></span>                         | <span data-ttu-id="a2352-288">System.Void</span><span class="sxs-lookup"><span data-stu-id="a2352-288">System.Void</span></span>                                                         |
|<span data-ttu-id="a2352-289">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="a2352-289">WildcardPattern</span></span>              | <span data-ttu-id="a2352-290">System. Management. Automation. WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="a2352-290">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="a2352-291">WMIC</span><span class="sxs-lookup"><span data-stu-id="a2352-291">wmi</span></span>                          | <span data-ttu-id="a2352-292">System. Management. ManagementObject</span><span class="sxs-lookup"><span data-stu-id="a2352-292">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="a2352-293">WMIClass</span><span class="sxs-lookup"><span data-stu-id="a2352-293">wmiclass</span></span>                     | <span data-ttu-id="a2352-294">System. Management. ManagementClass</span><span class="sxs-lookup"><span data-stu-id="a2352-294">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="a2352-295">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="a2352-295">wmisearcher</span></span>                  | <span data-ttu-id="a2352-296">System. Management. ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="a2352-296">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="a2352-297">X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="a2352-297">X500DistinguishedName</span></span>        | <span data-ttu-id="a2352-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="a2352-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="a2352-299">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="a2352-299">X509Certificate</span></span>              | <span data-ttu-id="a2352-300">System.Security.Cryptography.X509Certificates.X509Certificate</span><span class="sxs-lookup"><span data-stu-id="a2352-300">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="a2352-301">xml</span><span class="sxs-lookup"><span data-stu-id="a2352-301">xml</span></span>                          | <span data-ttu-id="a2352-302">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="a2352-302">System.Xml.XmlDocument</span></span>                                              |
