reference/7.0/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: Décrit les accélérateurs de type disponibles pour les classes .NET Framework
keywords: powershell,applet de commande
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 6f73aa590b64cda5739a2a118b2b4c5a6c103a67
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 10/13/2020
ms.locfileid: "93206769"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="0279f-104">À propos des accélérateurs de type</span><span class="sxs-lookup"><span data-stu-id="0279f-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="0279f-105">SHORT DESCRIPTION COMPLÈTE :</span><span class="sxs-lookup"><span data-stu-id="0279f-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="0279f-106">Décrit les accélérateurs de type disponibles pour les classes .NET Framework</span><span class="sxs-lookup"><span data-stu-id="0279f-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="0279f-107">DESCRIPTION DÉTAILLÉE</span><span class="sxs-lookup"><span data-stu-id="0279f-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="0279f-108">Les accélérateurs de type sont des alias pour les classes .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="0279f-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="0279f-109">Elles vous permettent d’accéder à des classes .NET Framework spécifiques sans avoir à taper explicitement le nom de la classe entière.</span><span class="sxs-lookup"><span data-stu-id="0279f-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="0279f-110">Par exemple, vous pouvez raccourcir la classe **AliasAttribute** de `[System.Management.Automation.AliasAttribute]` à `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="0279f-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="0279f-111">Tous les accélérateurs de type doivent toujours être encapsulés entre crochets ( `[]` ).</span><span class="sxs-lookup"><span data-stu-id="0279f-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="0279f-112">Accélérateurs de type disponibles</span><span class="sxs-lookup"><span data-stu-id="0279f-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="0279f-113">Accélérateur</span><span class="sxs-lookup"><span data-stu-id="0279f-113">Accelerator</span></span>          |                           <span data-ttu-id="0279f-114">Nom complet de la classe</span><span class="sxs-lookup"><span data-stu-id="0279f-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="0279f-115">modification</span><span class="sxs-lookup"><span data-stu-id="0279f-115">adsi</span></span>                         | <span data-ttu-id="0279f-116">System. DirectoryServices. DirectoryEntry</span><span class="sxs-lookup"><span data-stu-id="0279f-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="0279f-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="0279f-117">adsisearcher</span></span>                 | <span data-ttu-id="0279f-118">System. DirectoryServices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="0279f-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="0279f-119">Alias</span><span class="sxs-lookup"><span data-stu-id="0279f-119">Alias</span></span>                        | <span data-ttu-id="0279f-120">System. Management. Automation. AliasAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="0279f-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="0279f-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="0279f-122">System. Management. Automation. AllowEmptyCollectionAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="0279f-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="0279f-123">AllowEmptyString</span></span>             | <span data-ttu-id="0279f-124">System. Management. Automation. AllowEmptyStringAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="0279f-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="0279f-125">AllowNull</span></span>                    | <span data-ttu-id="0279f-126">System. Management. Automation. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="0279f-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="0279f-127">ArgumentCompleter</span></span>            | <span data-ttu-id="0279f-128">System. Management. Automation. ArgumentCompleterAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="0279f-129">ArgumentCompletions</span><span class="sxs-lookup"><span data-stu-id="0279f-129">ArgumentCompletions</span></span>          | <span data-ttu-id="0279f-130">System. Management. Automation. ArgumentCompletionsAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-130">System.Management.Automation.ArgumentCompletionsAttribute</span></span>           |
|<span data-ttu-id="0279f-131">tableau</span><span class="sxs-lookup"><span data-stu-id="0279f-131">array</span></span>                        | <span data-ttu-id="0279f-132">System.Array</span><span class="sxs-lookup"><span data-stu-id="0279f-132">System.Array</span></span>                                                        |
|<span data-ttu-id="0279f-133">bigint</span><span class="sxs-lookup"><span data-stu-id="0279f-133">bigint</span></span>                       | <span data-ttu-id="0279f-134">System. Numerics. BigInteger</span><span class="sxs-lookup"><span data-stu-id="0279f-134">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="0279f-135">bool</span><span class="sxs-lookup"><span data-stu-id="0279f-135">bool</span></span>                         | <span data-ttu-id="0279f-136">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="0279f-136">System.Boolean</span></span>                                                      |
|<span data-ttu-id="0279f-137">byte</span><span class="sxs-lookup"><span data-stu-id="0279f-137">byte</span></span>                         | <span data-ttu-id="0279f-138">System.Byte</span><span class="sxs-lookup"><span data-stu-id="0279f-138">System.Byte</span></span>                                                         |
|<span data-ttu-id="0279f-139">char</span><span class="sxs-lookup"><span data-stu-id="0279f-139">char</span></span>                         | <span data-ttu-id="0279f-140">System.Char</span><span class="sxs-lookup"><span data-stu-id="0279f-140">System.Char</span></span>                                                         |
|<span data-ttu-id="0279f-141">cimclass</span><span class="sxs-lookup"><span data-stu-id="0279f-141">cimclass</span></span>                     | <span data-ttu-id="0279f-142">Microsoft. Management. infrastructure. CimClass</span><span class="sxs-lookup"><span data-stu-id="0279f-142">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="0279f-143">cimconverter</span><span class="sxs-lookup"><span data-stu-id="0279f-143">cimconverter</span></span>                 | <span data-ttu-id="0279f-144">Microsoft. Management. infrastructure. CimConverter</span><span class="sxs-lookup"><span data-stu-id="0279f-144">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="0279f-145">ciminstance</span><span class="sxs-lookup"><span data-stu-id="0279f-145">ciminstance</span></span>                  | <span data-ttu-id="0279f-146">Microsoft.Management.Infrastructure.CimInstance</span><span class="sxs-lookup"><span data-stu-id="0279f-146">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="0279f-147">CimSession</span><span class="sxs-lookup"><span data-stu-id="0279f-147">CimSession</span></span>                   | <span data-ttu-id="0279f-148">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="0279f-148">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="0279f-149">cimtype</span><span class="sxs-lookup"><span data-stu-id="0279f-149">cimtype</span></span>                      | <span data-ttu-id="0279f-150">Microsoft. Management. infrastructure. CimType</span><span class="sxs-lookup"><span data-stu-id="0279f-150">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="0279f-151">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="0279f-151">CmdletBinding</span></span>                | <span data-ttu-id="0279f-152">System. Management. Automation. CmdletBindingAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-152">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="0279f-153">CultureInfo</span><span class="sxs-lookup"><span data-stu-id="0279f-153">cultureinfo</span></span>                  | <span data-ttu-id="0279f-154">System. Globalization. CultureInfo</span><span class="sxs-lookup"><span data-stu-id="0279f-154">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="0279f-155">DATETIME</span><span class="sxs-lookup"><span data-stu-id="0279f-155">datetime</span></span>                     | <span data-ttu-id="0279f-156">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="0279f-156">System.DateTime</span></span>                                                     |
|<span data-ttu-id="0279f-157">Décimal</span><span class="sxs-lookup"><span data-stu-id="0279f-157">decimal</span></span>                      | <span data-ttu-id="0279f-158">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="0279f-158">System.Decimal</span></span>                                                      |
|<span data-ttu-id="0279f-159">double</span><span class="sxs-lookup"><span data-stu-id="0279f-159">double</span></span>                       | <span data-ttu-id="0279f-160">System.Double</span><span class="sxs-lookup"><span data-stu-id="0279f-160">System.Double</span></span>                                                       |
|<span data-ttu-id="0279f-161">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="0279f-161">DscLocalConfigurationManager</span></span> | <span data-ttu-id="0279f-162">System. Management. Automation. DscLocalConfigurationManagerAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-162">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="0279f-163">DscProperty</span><span class="sxs-lookup"><span data-stu-id="0279f-163">DscProperty</span></span>                  | <span data-ttu-id="0279f-164">System. Management. Automation. DscPropertyAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-164">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="0279f-165">DscResource</span><span class="sxs-lookup"><span data-stu-id="0279f-165">DscResource</span></span>                  | <span data-ttu-id="0279f-166">System. Management. Automation. DscResourceAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-166">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="0279f-167">ExperimentAction</span><span class="sxs-lookup"><span data-stu-id="0279f-167">ExperimentAction</span></span>             | <span data-ttu-id="0279f-168">System. Management. Automation. ExperimentAction</span><span class="sxs-lookup"><span data-stu-id="0279f-168">System.Management.Automation.ExperimentAction</span></span>                       |
|<span data-ttu-id="0279f-169">Expérimental</span><span class="sxs-lookup"><span data-stu-id="0279f-169">Experimental</span></span>                 | <span data-ttu-id="0279f-170">System. Management. Automation. ExperimentalAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-170">System.Management.Automation.ExperimentalAttribute</span></span>                  |
|<span data-ttu-id="0279f-171">ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="0279f-171">ExperimentalFeature</span></span>          | <span data-ttu-id="0279f-172">System. Management. Automation. ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="0279f-172">System.Management.Automation.ExperimentalFeature</span></span>                    |
|<span data-ttu-id="0279f-173">float</span><span class="sxs-lookup"><span data-stu-id="0279f-173">float</span></span>                        | <span data-ttu-id="0279f-174">System.Single</span><span class="sxs-lookup"><span data-stu-id="0279f-174">System.Single</span></span>                                                       |
|<span data-ttu-id="0279f-175">guid</span><span class="sxs-lookup"><span data-stu-id="0279f-175">guid</span></span>                         | <span data-ttu-id="0279f-176">System.Guid</span><span class="sxs-lookup"><span data-stu-id="0279f-176">System.Guid</span></span>                                                         |
|<span data-ttu-id="0279f-177">hachage</span><span class="sxs-lookup"><span data-stu-id="0279f-177">hashtable</span></span>                    | <span data-ttu-id="0279f-178">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="0279f-178">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="0279f-179">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="0279f-179">initialsessionstate</span></span>          | <span data-ttu-id="0279f-180">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="0279f-180">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="0279f-181">int</span><span class="sxs-lookup"><span data-stu-id="0279f-181">int</span></span>                          | <span data-ttu-id="0279f-182">System.Int32</span><span class="sxs-lookup"><span data-stu-id="0279f-182">System.Int32</span></span>                                                        |
|<span data-ttu-id="0279f-183">int16</span><span class="sxs-lookup"><span data-stu-id="0279f-183">int16</span></span>                        | <span data-ttu-id="0279f-184">System.Int16</span><span class="sxs-lookup"><span data-stu-id="0279f-184">System.Int16</span></span>                                                        |
|<span data-ttu-id="0279f-185">int32</span><span class="sxs-lookup"><span data-stu-id="0279f-185">int32</span></span>                        | <span data-ttu-id="0279f-186">System.Int32</span><span class="sxs-lookup"><span data-stu-id="0279f-186">System.Int32</span></span>                                                        |
|<span data-ttu-id="0279f-187">int64</span><span class="sxs-lookup"><span data-stu-id="0279f-187">int64</span></span>                        | <span data-ttu-id="0279f-188">System.Int64</span><span class="sxs-lookup"><span data-stu-id="0279f-188">System.Int64</span></span>                                                        |
|<span data-ttu-id="0279f-189">IPAddress</span><span class="sxs-lookup"><span data-stu-id="0279f-189">ipaddress</span></span>                    | <span data-ttu-id="0279f-190">System .net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="0279f-190">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="0279f-191">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="0279f-191">IPEndpoint</span></span>                   | <span data-ttu-id="0279f-192">System .net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="0279f-192">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="0279f-193">long</span><span class="sxs-lookup"><span data-stu-id="0279f-193">long</span></span>                         | <span data-ttu-id="0279f-194">System.Int64</span><span class="sxs-lookup"><span data-stu-id="0279f-194">System.Int64</span></span>                                                        |
|<span data-ttu-id="0279f-195">MailAddress</span><span class="sxs-lookup"><span data-stu-id="0279f-195">mailaddress</span></span>                  | <span data-ttu-id="0279f-196">System .net. mail. MailAddress</span><span class="sxs-lookup"><span data-stu-id="0279f-196">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="0279f-197">NullString</span><span class="sxs-lookup"><span data-stu-id="0279f-197">NullString</span></span>                   | <span data-ttu-id="0279f-198">System. Management. Automation. Language. NullString</span><span class="sxs-lookup"><span data-stu-id="0279f-198">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="0279f-199">Objet ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="0279f-199">ObjectSecurity</span></span>               | <span data-ttu-id="0279f-200">System. Security. AccessControl. objet ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="0279f-200">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="0279f-201">OutputType</span><span class="sxs-lookup"><span data-stu-id="0279f-201">OutputType</span></span>                   | <span data-ttu-id="0279f-202">System. Management. Automation. OutputTypeAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-202">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="0279f-203">Paramètre</span><span class="sxs-lookup"><span data-stu-id="0279f-203">Parameter</span></span>                    | <span data-ttu-id="0279f-204">System. Management. Automation. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-204">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="0279f-205">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="0279f-205">PhysicalAddress</span></span>              | <span data-ttu-id="0279f-206">System .net. NetworkInformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="0279f-206">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="0279f-207">powershell</span><span class="sxs-lookup"><span data-stu-id="0279f-207">powershell</span></span>                   | <span data-ttu-id="0279f-208">System. Management. Automation. PowerShell</span><span class="sxs-lookup"><span data-stu-id="0279f-208">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="0279f-209">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="0279f-209">psaliasproperty</span></span>              | <span data-ttu-id="0279f-210">System. Management. Automation. PSAliasProperty</span><span class="sxs-lookup"><span data-stu-id="0279f-210">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="0279f-211">pscredential</span><span class="sxs-lookup"><span data-stu-id="0279f-211">pscredential</span></span>                 | <span data-ttu-id="0279f-212">System. Management. Automation. PSCredential</span><span class="sxs-lookup"><span data-stu-id="0279f-212">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="0279f-213">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="0279f-213">pscustomobject</span></span>               | <span data-ttu-id="0279f-214">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="0279f-214">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="0279f-215">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="0279f-215">PSDefaultValue</span></span>               | <span data-ttu-id="0279f-216">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-216">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="0279f-217">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="0279f-217">pslistmodifier</span></span>               | <span data-ttu-id="0279f-218">System. Management. Automation. PSListModifier</span><span class="sxs-lookup"><span data-stu-id="0279f-218">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="0279f-219">PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="0279f-219">psmoduleinfo</span></span>                 | <span data-ttu-id="0279f-220">System. Management. Automation. PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="0279f-220">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="0279f-221">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="0279f-221">psnoteproperty</span></span>               | <span data-ttu-id="0279f-222">System. Management. Automation. PSNoteProperty</span><span class="sxs-lookup"><span data-stu-id="0279f-222">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="0279f-223">PSObject</span><span class="sxs-lookup"><span data-stu-id="0279f-223">psobject</span></span>                     | <span data-ttu-id="0279f-224">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="0279f-224">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="0279f-225">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="0279f-225">psprimitivedictionary</span></span>        | <span data-ttu-id="0279f-226">System. Management. Automation. PSPrimitiveDictionary</span><span class="sxs-lookup"><span data-stu-id="0279f-226">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="0279f-227">pspropertyexpression</span><span class="sxs-lookup"><span data-stu-id="0279f-227">pspropertyexpression</span></span>         | <span data-ttu-id="0279f-228">Microsoft. PowerShell. Commands. PSPropertyExpression</span><span class="sxs-lookup"><span data-stu-id="0279f-228">Microsoft.PowerShell.Commands.PSPropertyExpression</span></span>                  |
|<span data-ttu-id="0279f-229">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="0279f-229">psscriptmethod</span></span>               | <span data-ttu-id="0279f-230">System. Management. Automation. PSScriptMethod</span><span class="sxs-lookup"><span data-stu-id="0279f-230">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="0279f-231">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="0279f-231">psscriptproperty</span></span>             | <span data-ttu-id="0279f-232">System. Management. Automation. PSScriptProperty</span><span class="sxs-lookup"><span data-stu-id="0279f-232">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="0279f-233">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-233">PSTypeNameAttribute</span></span>          | <span data-ttu-id="0279f-234">System. Management. Automation. PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-234">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="0279f-235">PSVariable</span><span class="sxs-lookup"><span data-stu-id="0279f-235">psvariable</span></span>                   | <span data-ttu-id="0279f-236">System. Management. Automation. PSVariable</span><span class="sxs-lookup"><span data-stu-id="0279f-236">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="0279f-237">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="0279f-237">psvariableproperty</span></span>           | <span data-ttu-id="0279f-238">System. Management. Automation. PSVariableProperty</span><span class="sxs-lookup"><span data-stu-id="0279f-238">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="0279f-239">ref</span><span class="sxs-lookup"><span data-stu-id="0279f-239">ref</span></span>                          | <span data-ttu-id="0279f-240">System. Management. Automation. PSReference</span><span class="sxs-lookup"><span data-stu-id="0279f-240">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="0279f-241">regex</span><span class="sxs-lookup"><span data-stu-id="0279f-241">regex</span></span>                        | <span data-ttu-id="0279f-242">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="0279f-242">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="0279f-243">instance d’exécution</span><span class="sxs-lookup"><span data-stu-id="0279f-243">runspace</span></span>                     | <span data-ttu-id="0279f-244">System. Management. Automation. instances d’exécution. Runspace</span><span class="sxs-lookup"><span data-stu-id="0279f-244">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="0279f-245">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="0279f-245">runspacefactory</span></span>              | <span data-ttu-id="0279f-246">System. Management. Automation. instances d’exécution. RunspaceFactory</span><span class="sxs-lookup"><span data-stu-id="0279f-246">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="0279f-247">sbyte</span><span class="sxs-lookup"><span data-stu-id="0279f-247">sbyte</span></span>                        | <span data-ttu-id="0279f-248">System.SByte</span><span class="sxs-lookup"><span data-stu-id="0279f-248">System.SByte</span></span>                                                        |
|<span data-ttu-id="0279f-249">scriptblock</span><span class="sxs-lookup"><span data-stu-id="0279f-249">scriptblock</span></span>                  | <span data-ttu-id="0279f-250">System. Management. Automation. ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="0279f-250">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="0279f-251">securestring</span><span class="sxs-lookup"><span data-stu-id="0279f-251">securestring</span></span>                 | <span data-ttu-id="0279f-252">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="0279f-252">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="0279f-253">semver</span><span class="sxs-lookup"><span data-stu-id="0279f-253">semver</span></span>                       | <span data-ttu-id="0279f-254">System. Management. Automation. SemanticVersion</span><span class="sxs-lookup"><span data-stu-id="0279f-254">System.Management.Automation.SemanticVersion</span></span>                        |
|<span data-ttu-id="0279f-255">short</span><span class="sxs-lookup"><span data-stu-id="0279f-255">short</span></span>                        | <span data-ttu-id="0279f-256">System.Int16</span><span class="sxs-lookup"><span data-stu-id="0279f-256">System.Int16</span></span>                                                        |
|<span data-ttu-id="0279f-257">unique</span><span class="sxs-lookup"><span data-stu-id="0279f-257">single</span></span>                       | <span data-ttu-id="0279f-258">System.Single</span><span class="sxs-lookup"><span data-stu-id="0279f-258">System.Single</span></span>                                                       |
|<span data-ttu-id="0279f-259">string</span><span class="sxs-lookup"><span data-stu-id="0279f-259">string</span></span>                       | <span data-ttu-id="0279f-260">System.String</span><span class="sxs-lookup"><span data-stu-id="0279f-260">System.String</span></span>                                                       |
|<span data-ttu-id="0279f-261">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="0279f-261">SupportsWildcards</span></span>            | <span data-ttu-id="0279f-262">System. Management. Automation. SupportsWildcardsAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-262">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="0279f-263">switch</span><span class="sxs-lookup"><span data-stu-id="0279f-263">switch</span></span>                       | <span data-ttu-id="0279f-264">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="0279f-264">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="0279f-265">intervalle de temps</span><span class="sxs-lookup"><span data-stu-id="0279f-265">timespan</span></span>                     | <span data-ttu-id="0279f-266">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="0279f-266">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="0279f-267">type</span><span class="sxs-lookup"><span data-stu-id="0279f-267">type</span></span>                         | <span data-ttu-id="0279f-268">System.Type</span><span class="sxs-lookup"><span data-stu-id="0279f-268">System.Type</span></span>                                                         |
|<span data-ttu-id="0279f-269">uint</span><span class="sxs-lookup"><span data-stu-id="0279f-269">uint</span></span>                         | <span data-ttu-id="0279f-270">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="0279f-270">System.UInt32</span></span>                                                       |
|<span data-ttu-id="0279f-271">uint16</span><span class="sxs-lookup"><span data-stu-id="0279f-271">uint16</span></span>                       | <span data-ttu-id="0279f-272">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="0279f-272">System.UInt16</span></span>                                                       |
|<span data-ttu-id="0279f-273">uint32</span><span class="sxs-lookup"><span data-stu-id="0279f-273">uint32</span></span>                       | <span data-ttu-id="0279f-274">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="0279f-274">System.UInt32</span></span>                                                       |
|<span data-ttu-id="0279f-275">uint64</span><span class="sxs-lookup"><span data-stu-id="0279f-275">uint64</span></span>                       | <span data-ttu-id="0279f-276">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="0279f-276">System.UInt64</span></span>                                                       |
|<span data-ttu-id="0279f-277">ulong</span><span class="sxs-lookup"><span data-stu-id="0279f-277">ulong</span></span>                        | <span data-ttu-id="0279f-278">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="0279f-278">System.UInt64</span></span>                                                       |
|<span data-ttu-id="0279f-279">URI</span><span class="sxs-lookup"><span data-stu-id="0279f-279">uri</span></span>                          | <span data-ttu-id="0279f-280">System.Uri</span><span class="sxs-lookup"><span data-stu-id="0279f-280">System.Uri</span></span>                                                          |
|<span data-ttu-id="0279f-281">ushort</span><span class="sxs-lookup"><span data-stu-id="0279f-281">ushort</span></span>                       | <span data-ttu-id="0279f-282">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="0279f-282">System.UInt16</span></span>                                                       |
|<span data-ttu-id="0279f-283">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="0279f-283">ValidateCount</span></span>                | <span data-ttu-id="0279f-284">System. Management. Automation. ValidateCountAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-284">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="0279f-285">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="0279f-285">ValidateDrive</span></span>                | <span data-ttu-id="0279f-286">System. Management. Automation. ValidateDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-286">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="0279f-287">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="0279f-287">ValidateLength</span></span>               | <span data-ttu-id="0279f-288">System. Management. Automation. ValidateLengthAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-288">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="0279f-289">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="0279f-289">ValidateNotNull</span></span>              | <span data-ttu-id="0279f-290">System. Management. Automation. ValidateNotNullAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-290">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="0279f-291">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="0279f-291">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="0279f-292">System. Management. Automation. ValidateNotNullOrEmptyAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-292">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="0279f-293">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="0279f-293">ValidatePattern</span></span>              | <span data-ttu-id="0279f-294">System. Management. Automation. ValidatePatternAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-294">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="0279f-295">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="0279f-295">ValidateRange</span></span>                | <span data-ttu-id="0279f-296">System. Management. Automation. ValidateRangeAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-296">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="0279f-297">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="0279f-297">ValidateScript</span></span>               | <span data-ttu-id="0279f-298">System. Management. Automation. ValidateScriptAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-298">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="0279f-299">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="0279f-299">ValidateSet</span></span>                  | <span data-ttu-id="0279f-300">System. Management. Automation. ValidateSetAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-300">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="0279f-301">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="0279f-301">ValidateTrustedData</span></span>          | <span data-ttu-id="0279f-302">System. Management. Automation. ValidateTrustedDataAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-302">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="0279f-303">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="0279f-303">ValidateUserDrive</span></span>            | <span data-ttu-id="0279f-304">System. Management. Automation. ValidateUserDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="0279f-304">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="0279f-305">version</span><span class="sxs-lookup"><span data-stu-id="0279f-305">version</span></span>                      | <span data-ttu-id="0279f-306">System.Version</span><span class="sxs-lookup"><span data-stu-id="0279f-306">System.Version</span></span>                                                      |
|<span data-ttu-id="0279f-307">void</span><span class="sxs-lookup"><span data-stu-id="0279f-307">void</span></span>                         | <span data-ttu-id="0279f-308">System.Void</span><span class="sxs-lookup"><span data-stu-id="0279f-308">System.Void</span></span>                                                         |
|<span data-ttu-id="0279f-309">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="0279f-309">WildcardPattern</span></span>              | <span data-ttu-id="0279f-310">System. Management. Automation. WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="0279f-310">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="0279f-311">WMIC</span><span class="sxs-lookup"><span data-stu-id="0279f-311">wmi</span></span>                          | <span data-ttu-id="0279f-312">System. Management. ManagementObject</span><span class="sxs-lookup"><span data-stu-id="0279f-312">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="0279f-313">WMIClass</span><span class="sxs-lookup"><span data-stu-id="0279f-313">wmiclass</span></span>                     | <span data-ttu-id="0279f-314">System. Management. ManagementClass</span><span class="sxs-lookup"><span data-stu-id="0279f-314">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="0279f-315">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="0279f-315">wmisearcher</span></span>                  | <span data-ttu-id="0279f-316">System. Management. ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="0279f-316">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="0279f-317">X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="0279f-317">X500DistinguishedName</span></span>        | <span data-ttu-id="0279f-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="0279f-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="0279f-319">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="0279f-319">X509Certificate</span></span>              | <span data-ttu-id="0279f-320">System.Security.Cryptography.X509Certificates.X509Certificate</span><span class="sxs-lookup"><span data-stu-id="0279f-320">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="0279f-321">xml</span><span class="sxs-lookup"><span data-stu-id="0279f-321">xml</span></span>                          | <span data-ttu-id="0279f-322">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="0279f-322">System.Xml.XmlDocument</span></span>                                              |
